--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,12 @@ stages:
           WATCHOS_ACTIONS: 'clean test'
           WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
           UTILS_PW_XCF_FLAG: '--xcf'
+        macosSwift55:
+          imageName: 'macOS-11'
+          DEVELOPER_DIR: '/Applications/Xcode_13.0.app'
+          WATCHOS_ACTIONS: 'clean test'
+          WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
+          UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
     steps:
@@ -75,6 +81,9 @@ stages:
         linuxSwift54:
           imageName: 'ubuntu-18.04'
           containerImage: 'swift:5.4.3-bionic'
+        linuxSwift55:
+          imageName: 'ubuntu-18.04'
+          containerImage: 'swift:5.5-bionic'
     pool:
       vmImage: $(imageName)
     container: $[ variables['containerImage'] ]
@@ -91,6 +100,9 @@ stages:
         windowsSwift54:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.4.3'
+        windowsSwift55:
+          imageName: 'windows-2019'
+          SWIFT_VERSION: '5.5'
     pool:
       vmImage: $(imageName)
     variables:
