--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,14 +45,38 @@ stages:
           UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
+    variables:
+      GIT_LFS_SKIP_SMUDGE: 1
     steps:
     - script: |
         set -e -o xtrace
         brew update
-        ./utils.py ci install-macos
-      displayName: 'Install'
-    - script: ./utils.py prepare-workspace macos $UTILS_PW_XCF_FLAG
-      displayName: 'Prepare Workspace'
+        ./utils.py ci install-git-lfs-macos
+        ls -a "Tests/Test Files"
+      displayName: 'Install Git LFS'
+    - script: |
+        set -e -o xtrace
+        git submodule update --init --recursive
+        cp "Tests/Test Files/gitattributes-copy" "Tests/Test Files/.gitattributes"
+      displayName: 'Update submodules'
+    - script: |
+        set -e -o xtrace
+        cd "Tests/Test Files"
+        git lfs ls-files -l | cut -d' ' -f1 | sort > ../../.assets-id
+      displayName: 'Generate assets-id'
+    - task: Cache@2
+      inputs:
+        key: '"swc_test_files_v3_" | .assets-id'
+        path: '.git/modules/Tests/Test Files/lfs'
+      displayName: 'Cache lfs of test files'
+    - script: |
+        set -e -o xtrace
+        cd "Tests/Test Files"
+        git lfs pull
+        git lfs checkout
+      displayName: 'Download or update test files'
+    - script: ./utils.py download-bbd-macos $UTILS_PW_XCF_FLAG
+      displayName: 'Download BitByteData'
     - script: ./utils.py ci script-macos
       displayName: 'Build & Test'
     - script: swift build -c release
