--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,29 +20,29 @@ stages:
           DEVELOPER_DIR: '/Applications/Xcode_11.3.1.app'
           WATCHOS_ACTIONS: 'clean build'
           WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
-        macosSwift52:
-          imageName: 'macOS-10.15'
-          DEVELOPER_DIR: '/Applications/Xcode_11.4.1.app'
-          WATCHOS_ACTIONS: 'clean build'
-          WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
-        macosSwift53:
-          imageName: 'macOS-10.15'
-          DEVELOPER_DIR: '/Applications/Xcode_12.4.app'
-          WATCHOS_ACTIONS: 'clean build'
-          WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
-          UTILS_PW_XCF_FLAG: '--xcf'
-        macosSwift54:
-          imageName: 'macOS-11'
-          DEVELOPER_DIR: '/Applications/Xcode_12.5.1.app'
-          WATCHOS_ACTIONS: 'clean test'
-          WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
-          UTILS_PW_XCF_FLAG: '--xcf'
-        macosSwift55:
-          imageName: 'macOS-11'
-          DEVELOPER_DIR: '/Applications/Xcode_13.0.app'
-          WATCHOS_ACTIONS: 'clean test'
-          WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
-          UTILS_PW_XCF_FLAG: '--xcf'
+        # macosSwift52:
+        #   imageName: 'macOS-10.15'
+        #   DEVELOPER_DIR: '/Applications/Xcode_11.4.1.app'
+        #   WATCHOS_ACTIONS: 'clean build'
+        #   WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
+        # macosSwift53:
+        #   imageName: 'macOS-10.15'
+        #   DEVELOPER_DIR: '/Applications/Xcode_12.4.app'
+        #   WATCHOS_ACTIONS: 'clean build'
+        #   WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
+        #   UTILS_PW_XCF_FLAG: '--xcf'
+        # macosSwift54:
+        #   imageName: 'macOS-11'
+        #   DEVELOPER_DIR: '/Applications/Xcode_12.5.1.app'
+        #   WATCHOS_ACTIONS: 'clean test'
+        #   WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
+        #   UTILS_PW_XCF_FLAG: '--xcf'
+        # macosSwift55:
+        #   imageName: 'macOS-11'
+        #   DEVELOPER_DIR: '/Applications/Xcode_13.0.app'
+        #   WATCHOS_ACTIONS: 'clean test'
+        #   WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
+        #   UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
     variables:
