--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -18,6 +18,7 @@ custom_categories:
       - LZMA
       - LZMAProperties
       - LZMA2
+      - LZ4
     - name: Archives
       children:
       - GzipArchive
@@ -41,6 +42,7 @@ custom_categories:
     - name: Errors
       children:
       - BZip2Error
+      - DataError
       - DeflateError
       - GzipError
       - LZMAError
