--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -3,11 +3,11 @@ sourcekitten_sourcefile: docs.json
 clean: false
 author: Timofey Solomko
 module: SWCompression
-module_version: 4.7.0
+module_version: 4.8.0-test
 copyright: '© 2022 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.7.0
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.8.0-test
 theme: fullwidth
 
 custom_categories:
