--- a/SWCompression.xcodeproj/TestSWCompression.plist
+++ b/SWCompression.xcodeproj/TestSWCompression.plist
@@ -15,8 +15,8 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.7.0</string>
+	<string>4.8.0-test</string>
 	<key>CFBundleVersion</key>
-	<string>83</string>
+	<string>84</string>
 </dict>
 </plist>
