[docs] Add TarReader/Writer to jazzy categories

--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -32,6 +32,8 @@ custom_categories:
       - SevenZipEntry
       - SevenZipEntryInfo
       - TarContainer
+      - TarReader
+      - TarWriter
       - TarEntry
       - TarEntryInfo
       - ZipContainer
