--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,10 +39,16 @@ stages:
           UTILS_PW_XCF_FLAG: '--xcf'
         macosSwift55:
           imageName: 'macOS-11'
-          DEVELOPER_DIR: '/Applications/Xcode_13.2.app'
+          DEVELOPER_DIR: '/Applications/Xcode_13.2.1.app'
           WATCHOS_ACTIONS: 'clean test'
           WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
           UTILS_PW_XCF_FLAG: '--xcf'
+        # macosSwift56:
+        #   imageName: 'macOS-12'
+        #   DEVELOPER_DIR: '/Applications/Xcode_13.3.app'
+        #   WATCHOS_ACTIONS: 'clean test'
+        #   WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
+        #   UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
     variables:
@@ -99,6 +105,9 @@ stages:
         linuxSwift55:
           imageName: 'ubuntu-18.04'
           containerImage: 'swift:5.5.3-bionic'
+        linuxSwift56:
+          imageName: 'ubuntu-18.04'
+          containerImage: 'swift:5.6-bionic'
     pool:
       vmImage: $(imageName)
     container: $[ variables['containerImage'] ]
@@ -118,6 +127,9 @@ stages:
         windowsSwift55:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.5.3'
+        windowsSwift56:
+          imageName: 'windows-2019'
+          SWIFT_VERSION: '5.6'
     pool:
       vmImage: $(imageName)
     variables:
