--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,12 +43,12 @@ stages:
           WATCHOS_ACTIONS: 'clean test'
           WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
           UTILS_PW_XCF_FLAG: '--xcf'
-        # macosSwift56:
-        #   imageName: 'macOS-12'
-        #   DEVELOPER_DIR: '/Applications/Xcode_13.3.app'
-        #   WATCHOS_ACTIONS: 'clean test'
-        #   WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
-        #   UTILS_PW_XCF_FLAG: '--xcf'
+        macosSwift56:
+          imageName: 'macOS-12'
+          DEVELOPER_DIR: '/Applications/Xcode_13.3.1.app'
+          WATCHOS_ACTIONS: 'clean test'
+          WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
+          UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
     variables:
@@ -107,7 +107,7 @@ stages:
           containerImage: 'swift:5.5.3-bionic'
         linuxSwift56:
           imageName: 'ubuntu-18.04'
-          containerImage: 'swift:5.6-bionic'
+          containerImage: 'swift:5.6.1-bionic'
     pool:
       vmImage: $(imageName)
     container: $[ variables['containerImage'] ]
@@ -129,7 +129,7 @@ stages:
           SWIFT_VERSION: '5.5.3'
         windowsSwift56:
           imageName: 'windows-2019'
-          SWIFT_VERSION: '5.6'
+          SWIFT_VERSION: '5.6.1'
     pool:
       vmImage: $(imageName)
     variables:
