--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -127,24 +127,16 @@ stages:
         windowsSwift55:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.5.3'
-        windowsSwift56:
-          imageName: 'windows-2019'
-          SWIFT_VERSION: '5.6.1'
+        # windowsSwift56:
+        #   imageName: 'windows-2019'
+        #   SWIFT_VERSION: '5.6.1'
     pool:
       vmImage: $(imageName)
     variables:
       DEVELOPER_DIR: 'C:\Library\Developer'
       SDKROOT: 'C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk'
-      XCTEST_DIR: 'C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development'
-      SWIFTFLAGS: '--sdk $(SDKROOT)'
-      SWIFTTESTFLAGS: '-Xswiftc -I -Xswiftc $(XCTEST_DIR)\usr\lib\swift\windows\x86_64 -Xswiftc -L -Xswiftc $(XCTEST_DIR)\usr\lib\swift\windows -Xswiftc -sdk -Xswiftc $(SDKROOT)'
+      SWIFTFLAGS: '--sdk $(SDKROOT) -Xswiftc -sdk -Xswiftc $(SDKROOT) -Xswiftc -resource-dir -Xswiftc $(SDKROOT)/usr/lib/swift -Xswiftc -I -Xswiftc $(SDKROOT)/usr/lib/swift -Xswiftc -L -Xswiftc $(SDKROOT)/usr/lib/swift/windows'
     steps:
-    - task: BatchScript@1
-      inputs:
-        filename: C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/Common7/Tools/VsDevCmd.bat
-        arguments: -no_logo -arch=x64 -host_arch=x64
-        modifyEnvironment: true
-      displayName: 'vsvarsall.bat'
     - pwsh: Invoke-WebRequest -Uri https://swift.org/builds/swift-$(SWIFT_VERSION)-release/windows10/swift-$(SWIFT_VERSION)-RELEASE/swift-$(SWIFT_VERSION)-RELEASE-windows10.exe -OutFile swift-install.exe
       displayName: 'Download Swift'
     - task: BatchScript@1
@@ -153,12 +145,6 @@ stages:
         arguments: /install /quiet
         modifyEnvironment: true
       displayName: 'Install Swift'
-    - script: |
-        copy %SDKROOT%\usr\share\ucrt.modulemap "%UniversalCRTSdkDir%\Include\%UCRTVersion%\ucrt\module.modulemap"
-        copy %SDKROOT%\usr\share\visualc.modulemap "%VCToolsInstallDir%\include\module.modulemap"
-        copy %SDKROOT%\usr\share\visualc.apinotes "%VCToolsInstallDir%\include\visualc.apinotes"
-        copy %SDKROOT%\usr\share\winsdk.modulemap "%UniversalCRTSdkDir%\Include\%UCRTVersion%\um\module.modulemap"
-      displayName: 'Configure SDK'
     - script: |
         set PATH=C:\Library\Developer\Toolchains\unknown-Asserts-development.xctoolchain\usr\bin;C:\Library\Swift-development\bin;C:\Library\icu-67\usr\bin;%PATH%
         swift.exe --version
