Xcode 14-related updates: drop support for swift 5.1, increase deployment targets on darwin platforms, enable dead code stripping and eager linking in xcode project, add swift 5.7 to CI, update macos-10.15 to macos-11 and ubuntu-18.04 to ubuntu-20.04 in CI due to deprecations

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,18 +15,13 @@ stages:
   - job: macos
     strategy:
       matrix:
-        macosSwift51:
-          imageName: 'macOS-10.15'
-          DEVELOPER_DIR: '/Applications/Xcode_11.3.1.app'
-          WATCHOS_ACTIONS: 'clean build'
-          WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
         macosSwift52:
-          imageName: 'macOS-10.15'
-          DEVELOPER_DIR: '/Applications/Xcode_11.4.1.app'
+          imageName: 'macOS-11'
+          DEVELOPER_DIR: '/Applications/Xcode_11.7.app'
           WATCHOS_ACTIONS: 'clean build'
           WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
         macosSwift53:
-          imageName: 'macOS-10.15'
+          imageName: 'macOS-11'
           DEVELOPER_DIR: '/Applications/Xcode_12.4.app'
           WATCHOS_ACTIONS: 'clean build'
           WATCHOS_SIMULATOR: 'Apple Watch Series 4 - 44mm'
@@ -45,9 +40,15 @@ stages:
           UTILS_PW_XCF_FLAG: '--xcf'
         macosSwift56:
           imageName: 'macOS-12'
-          DEVELOPER_DIR: '/Applications/Xcode_13.4.app'
+          DEVELOPER_DIR: '/Applications/Xcode_13.4.1.app'
           WATCHOS_ACTIONS: 'clean test'
           WATCHOS_SIMULATOR: 'Apple Watch Series 6 - 44mm'
+          UTILS_PW_XCF_FLAG: '--xcf'
+        macosSwift57:
+          imageName: 'macOS-12'
+          DEVELOPER_DIR: '/Applications/Xcode_14.0.app'
+          WATCHOS_ACTIONS: 'clean test'
+          WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
           UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
@@ -90,24 +91,24 @@ stages:
   - job: linux
     strategy:
       matrix:
-        linuxSwift51:
-          imageName: 'ubuntu-18.04'
-          containerImage: 'swift:5.1.5-bionic'
         linuxSwift52:
-          imageName: 'ubuntu-18.04'
-          containerImage: 'swift:5.2.5-bionic'
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.2.5-focal'
         linuxSwift53:
-          imageName: 'ubuntu-18.04'
-          containerImage: 'swift:5.3.3-bionic'
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.3.3-focal'
         linuxSwift54:
-          imageName: 'ubuntu-18.04'
-          containerImage: 'swift:5.4.3-bionic'
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.4.3-focal'
         linuxSwift55:
-          imageName: 'ubuntu-18.04'
-          containerImage: 'swift:5.5.3-bionic'
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.5.3-focal'
         linuxSwift56:
-          imageName: 'ubuntu-18.04'
-          containerImage: 'swift:5.6.1-bionic'
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.6.3-focal'
+        linuxSwift57:
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.7-focal'
     pool:
       vmImage: $(imageName)
     container: $[ variables['containerImage'] ]
@@ -129,7 +130,10 @@ stages:
           SWIFT_VERSION: '5.5.3'
         # windowsSwift56:
         #   imageName: 'windows-2019'
-        #   SWIFT_VERSION: '5.6.1'
+        #   SWIFT_VERSION: '5.6.3'
+        # windowsSwift57:
+        #   imageName: 'windows-2019'
+        #   SWIFT_VERSION: '5.7'
     pool:
       vmImage: $(imageName)
     variables:
@@ -160,7 +164,7 @@ stages:
   - job: ghPages
     displayName: 'Publish API docs to GH Pages'
     pool:
-      vmImage: 'macOS-10.15'
+      vmImage: 'macOS-11'
     variables:
       DEVELOPER_DIR: '/Applications/Xcode_12.4.app'
     steps:
