--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,19 +125,23 @@ stages:
         windowsSwift54:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.4.3'
-          ICU_VERSION: '67'
+          ICU_PATH: 'C:\Library\icu-67\usr\bin'
+          SWIFT_DEV_PATH: 'C:\Library\Swift-development\bin'
         windowsSwift55:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.5.3'
-          ICU_VERSION: '67'
+          ICU_PATH: 'C:\Library\icu-67\usr\bin'
+          SWIFT_DEV_PATH: 'C:\Library\Swift-development\bin'
         windowsSwift56:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.6.3'
-          ICU_VERSION: '69.1'
+          ICU_PATH: 'C:\Library\icu-69.1\usr\bin'
+          SWIFT_DEV_PATH: 'C:\Library\Swift-development\bin'
         windowsSwift57:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.7'
-          ICU_VERSION: ''
+          ICU_PATH: 'C:\Program Files\swift\icu-69.1\usr\bin'
+          SWIFT_DEV_PATH: 'C:\Program Files\swift\runtime-development\usr\bin'
     pool:
       vmImage: $(imageName)
     variables:
@@ -154,7 +158,7 @@ stages:
         modifyEnvironment: true
       displayName: 'Install Swift'
     - script: |
-        set PATH=C:\Library\Developer\Toolchains\unknown-Asserts-development.xctoolchain\usr\bin;C:\Library\Swift-development\bin;C:\Library\icu-%ICU_VERSION%\usr\bin;%PATH%
+        set PATH=C:\Library\Developer\Toolchains\unknown-Asserts-development.xctoolchain\usr\bin;%SWIFT_DEV_PATH%;%ICU_PATH%;%PATH%
         swift.exe --version
         swift.exe build %SWIFTFLAGS%
         swift.exe build -c release %SWIFTFLAGS%
