--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,12 @@ stages:
           WATCHOS_ACTIONS: 'clean test'
           WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
           UTILS_PW_XCF_FLAG: '--xcf'
+        # macosSwift58:
+        #   imageName: 'macOS-13'
+        #   DEVELOPER_DIR: '/Applications/Xcode_14.3.app'
+        #   WATCHOS_ACTIONS: 'clean test'
+        #   WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
+        #   UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
     variables:
@@ -109,6 +115,9 @@ stages:
         linuxSwift57:
           imageName: 'ubuntu-20.04'
           containerImage: 'swift:5.7.3-focal'
+        linuxSwift58:
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.8-focal'
     pool:
       vmImage: $(imageName)
     container: $[ variables['containerImage'] ]
@@ -140,6 +149,11 @@ stages:
         windowsSwift57:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.7.3'
+          ICU_PATH: 'C:\Program Files\swift\icu-69.1\usr\bin'
+          SWIFT_DEV_PATH: 'C:\Program Files\swift\runtime-development\usr\bin'
+        windowsSwift58:
+          imageName: 'windows-2019'
+          SWIFT_VERSION: '5.8'
           ICU_PATH: 'C:\Program Files\swift\icu-69.1\usr\bin'
           SWIFT_DEV_PATH: 'C:\Program Files\swift\runtime-development\usr\bin'
     pool:
