--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -143,9 +143,11 @@ stages:
         linuxSwift52:
           imageName: 'ubuntu-20.04'
           containerImage: 'swift:5.2.5-focal'
+          SWIFT_TEST_DISCOVERY: '--enable-test-discovery'
         linuxSwift53:
           imageName: 'ubuntu-20.04'
           containerImage: 'swift:5.3.3-focal'
+          SWIFT_TEST_DISCOVERY: '--enable-test-discovery'
         linuxSwift54:
           imageName: 'ubuntu-20.04'
           containerImage: 'swift:5.4.3-focal'
@@ -168,8 +170,8 @@ stages:
     - script: |
         set -e -o xtrace
         swift --version
-        swift build
-        swift build -c release # Check Release build just in case.
+        swift build $SWIFT_TEST_DISCOVERY
+        swift build -c release $SWIFT_TEST_DISCOVERY # Check Release build just in case.
       displayName: 'Build SPM Debug & Release'
   - job: windows
     strategy:
