--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,14 @@ stages:
           UTILS_PW_XCF_FLAG: '--xcf'
         macosSwift59:
           imageName: 'macOS-13'
-          DEVELOPER_DIR: '/Applications/Xcode_15.1.app'
+          DEVELOPER_DIR: '/Applications/Xcode_15.2.app'
+          IOS_SIMULATOR: 'iPhone 14'
+          WATCHOS_ACTIONS: 'clean test'
+          WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
+          UTILS_PW_XCF_FLAG: '--xcf'
+        macosSwift510:
+          imageName: 'macOS-14'
+          DEVELOPER_DIR: '/Applications/Xcode_15.3.app'
           IOS_SIMULATOR: 'iPhone 14'
           WATCHOS_ACTIONS: 'clean test'
           WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
@@ -129,6 +136,9 @@ stages:
         linuxSwift59:
           imageName: 'ubuntu-20.04'
           containerImage: 'swift:5.9.2-focal'
+        linuxSwift510:
+          imageName: 'ubuntu-20.04'
+          containerImage: 'swift:5.10-focal'
     pool:
       vmImage: $(imageName)
     container: $[ variables['containerImage'] ]
@@ -170,6 +180,11 @@ stages:
         windowsSwift59:
           imageName: 'windows-2019'
           SWIFT_VERSION: '5.9.2'
+          ICU_PATH: 'C:\Program Files\swift\icu-69.1\usr\bin'
+          SWIFT_DEV_PATH: 'C:\Program Files\swift\runtime-development\usr\bin'
+        windowsSwift510:
+          imageName: 'windows-2019'
+          SWIFT_VERSION: '5.10'
           ICU_PATH: 'C:\Program Files\swift\icu-69.1\usr\bin'
           SWIFT_DEV_PATH: 'C:\Program Files\swift\runtime-development\usr\bin'
     pool:
