--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,13 +70,14 @@ stages:
           WATCHOS_ACTIONS: 'clean test'
           WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
           UTILS_PW_XCF_FLAG: '--xcf'
-        macosSwift510:
-          imageName: 'macOS-14'
-          DEVELOPER_DIR: '/Applications/Xcode_15.3.app'
-          IOS_SIMULATOR: 'iPhone 14'
-          WATCHOS_ACTIONS: 'clean test'
-          WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
-          UTILS_PW_XCF_FLAG: '--xcf'
+        # TODO: Enable when AZP adds macOS 14 images.
+        # macosSwift510:
+        #   imageName: 'macOS-14'
+        #   DEVELOPER_DIR: '/Applications/Xcode_15.3.app'
+        #   IOS_SIMULATOR: 'iPhone 14'
+        #   WATCHOS_ACTIONS: 'clean test'
+        #   WATCHOS_SIMULATOR: 'Apple Watch Series 6 (44mm)'
+        #   UTILS_PW_XCF_FLAG: '--xcf'
     pool:
       vmImage: $(imageName)
     variables:
